# src/controllers/ticket.controller.ts
@@ -59,7 +59,22 @@ export async function getAllTickets(
       return;
     }
 
-    const tickets = await Ticket.find();
+    const { name, priority, source } = req.query;
+    const page = parseInt(req.query.page as string) || 1;
+    const limit = parseInt(req.query.limit as string) || 10;
+    const skip = (page - 1) * limit;
+
+    const tickets = await Ticket.find({
+      name: { $regex: name ?? "", $options: "i" },
+      priority: { $regex: priority ?? "", $options: "i" },
+      source: { $regex: source ?? "", $options: "i" }
+    })
+      .populate("owner", "fullName")
+      .populate("contact", "name")
+      .skip(skip)
+      .limit(limit)
+      .sort({ createdAt: -1 });
+
     if (tickets.length === 0) {
       res
         .status(404)
@@ -71,7 +86,7 @@ export async function getAllTickets(
       return;
     }
     logger.info("Retrieved all tickets");
-    res.status(200).json({ message: "Tickets retrieved", data: tickets });
+    res.status(200).json({ message: "Tickets retrieved", data: { tickets, total: tickets.length, page, limit } });
     return;
   } catch (err: unknown) {
     logger.error(`Error retrieving tickets: ${(err as Error).message}`);
